--- a/trunk/Circuitos-Teoricos/Pago-a-Proveedores/circuito-pago-a-proveedores.tex
+++ b/trunk/Circuitos-Teoricos/Pago-a-Proveedores/circuito-pago-a-proveedores.tex
@@ -26,9 +26,9 @@
   \includegraphics{./Images/Simbolos/simbolo-Documentos.png}
 \end{center}
 \begin{enumerate}
-  \item Factura (F).
+  \item Factura (F)
   \item Recibo (REC)
-  \item Orden de pago (OP).
+  \item Orden de pago (OP)
   \item Cheque
 \end{enumerate}
 
@@ -37,10 +37,10 @@
   \includegraphics{./Images/Simbolos/simbolo-Emision-de-Documentos.png}
 \end{center}
 \begin{enumerate}
-  \item Proveedor emite factura, original y copia
-  \item Proveedor emite recibo del pago, en original y duplicado.
-  \item Cuentas a pagar, de acuerdo a la factura recibida, confecciona la Orden de Pago por triplicado.
-  \item Tesorería emite cheque de pago a proveedor.
+  \item Proveedor: emite factura, original y dos copias.
+  \item Proveedor: emite recibo del pago, original y copia.
+  \item Cuentas a pagar: con la factura recibida confecciona la Orden de Pago, original y dos copias.
+  \item Tesorería: emite cheque de pago a proveedor.
 \end{enumerate}
 
 \begin{center}
@@ -48,10 +48,10 @@
   \includegraphics{./Images/Simbolos/simbolo-Firma.png}
 \end{center}
 \begin{enumerate}
-  \item Proveedor firma recibo.
-  \item Cuentas a Pagar firma las órdenes de pago.
-  \item Tesorería pone la primera firma en el cheque.
-  \item Gcia. administrativa pone la segunda firma en el cheque.
+  \item Proveedor: firma recibo.
+  \item Cuentas a Pagar: firma las órdenes de pago.
+  \item Tesorería: realiza la primera firma del cheque.
+  \item Gcia. administrativa: realiza la segunda firma del cheque.
 \end{enumerate}
 
 \begin{center}
@@ -59,12 +59,12 @@
   \includegraphics{./Images/Simbolos/simbolo-Distribucion.png}
 \end{center}
 \begin{enumerate}
-  \item Proveedor distribuye factura original a cuentas a pagar, y conserva el duplicado.
-  \item Proveedor distribuye recibo original a Tesorería, conserva el duplicado.
-  \item Cuentas a Pagar distribuye las órdenes de pago. Original y duplicado a Tesorería, conserva el triplicado.
-  \item Tesorería distribuye cheque, orden de pago original y legajo de pago a Gcia. Administrativa.
-  \item Tesorería distribuye cheque a proveedor, previamente lo registra.
-  \item Tesorería distribuye Recibo y Legajo a Contaduría.
+  \item Proveedor: distribuye factura original a cuentas a pagar, y conserva la copia.
+  \item Proveedor: distribuye recibo original a Tesorería, conserva la copia.
+  \item Cuentas a Pagar: distribuye las órdenes de pago. Original y primera copia a Tesorería, conserva la \'ultima copia.
+  \item Tesorería: distribuye cheque, orden de pago original y legajo de pago a Gcia. Administrativa.
+  \item Tesorería: distribuye cheque a proveedor, previamente lo registra.
+  \item Tesorería: distribuye Recibo y Legajo a Contaduría.
 \end{enumerate}
 
 \begin{center}
@@ -72,10 +72,10 @@
   \includegraphics{./Images/Simbolos/simbolo-Almacenamiento-Transitorio.png}
 \end{center}
 \begin{enumerate}
-  \item Cuentas a Pagar almacena OC2, RTO0 y PR3firm .
-  \item Cuentas a Pagar almacena OP2.
-  \item Cuentas a Pagar almacena libros contables.
-  \item Tesorería almacena OP1.
+  \item Cuentas a Pagar: almacena OC segunda copia, RTO original y PR tercera copia firmada.
+  \item Cuentas a Pagar: almacena OP segunda copia.
+  \item Cuentas a Pagar: almacena libros contables.
+  \item Tesorería: almacena OP primera copia.
 \end{enumerate}
 
 \begin{center}
@@ -83,9 +83,9 @@
   \includegraphics{./Images/Simbolos/simbolo-Control-y-Verificacion.png}
 \end{center}
 \begin{enumerate}
-  \item Proveedor controla el cheque con la factura que envió, para verificar el cumplimiento del pago de la misma, verificando el monto y el plazo de pago.
-  \item Cuentas a Pagar realiza control de factura, remito, parte de recepción y la orden de compra, verificando que la factura haya sido correctamente confeccionada, y que tanto ésta última como el remito y el parte de recepción referencien a la orden de compra en cuestión. 
-  \item Gcia. administrativa controla el legajo con el cheque y el original de la orden de pago, verificando que el cheque haya sido correctamente confeccionado, para el proveedor en cuestión y con el monto correcto.
+  \item Proveedor: controla el cheque con la factura que envió, para verificar el cumplimiento del pago de la misma, verificando el monto y el plazo de pago.
+  \item Cuentas a Pagar: realiza control de factura, remito, parte de recepción y la orden de compra, verificando que la factura haya sido correctamente confeccionada, y que tanto ésta última como el remito y el parte de recepción referencien a la orden de compra en cuestión. 
+  \item Gcia. administrativa: controla el legajo con el cheque y el original de la orden de pago, verificando que el cheque haya sido correctamente confeccionado, para el proveedor en cuestión y con el monto correcto.
 \end{enumerate}
 
 \begin{center}
@@ -93,9 +93,9 @@
   \includegraphics{./Images/Simbolos/simbolo-Decision.png}
 \end{center}
 \begin{enumerate}
-  \item Proveedor si el cheque pasa el control y verificaci\'on, entonces se emite el recibo; caso contrario devuelve el cheque a Tesorería.
-  \item Cuentas a Pagar si la factura pasa el control y verificaci\'on, entonces arma el legajo de pago; caso contrario rechaza la factura y la devuelve al proveedor.
-  \item Gcia. administrativa si legajo pasa el control y verificaci\'on, entonces coloca PAGADO y firma el cheque; caso contrario devuelve la documentación a Tesorería.
+  \item Proveedor: si el cheque pasa el control y verificaci\'on, entonces se emite el recibo; caso contrario devuelve el cheque a Tesorería.
+  \item Cuentas a Pagar: si la factura pasa el control y verificaci\'on, entonces arma el legajo de pago; caso contrario rechaza la factura y la devuelve al proveedor.
+  \item Gcia. administrativa: si legajo pasa el control y verificaci\'on, entonces coloca PAGADO y firma el cheque; caso contrario devuelve la documentación a Tesorería.
 \end{enumerate}
 
 \begin{center}
@@ -103,10 +103,10 @@
   \includegraphics{./Images/Simbolos/simbolo-Operacion.png}
 \end{center}
 \begin{enumerate}
-  \item Cuentas a Pagar arma legajo de pago.
-  \item Tesorería entrega cheque.
-  \item Tesorería agrega el recibo al legajo de pago.
-  \item Gcia. administrativa coloca “Pagado” inutilizando toda la documentación, para evitar nueva presentación.
+  \item Cuentas a Pagar: arma legajo de pago.
+  \item Tesorería: entrega cheque.
+  \item Tesorería: agrega el recibo al legajo de pago.
+  \item Gcia. administrativa: coloca “Pagado” inutilizando toda la documentación, para evitar nueva presentación.
 \end{enumerate}
 
 \begin{center}
@@ -114,8 +114,8 @@
   \includegraphics{./Images/Simbolos/simbolo-Registro.png}
 \end{center}
 \begin{enumerate}
-  \item Cuentas a Pagar registra la compra en la cta. cte. proveedores.
-  \item Cuentas a Pagar registra contablemente el pago en los libros contables. 
+  \item Cuentas a Pagar: registra la compra en la cta. cte. proveedores.
+  \item Cuentas a Pagar: registra contablemente el pago en los libros contables. 
 \end{enumerate}
 
 \begin{center}
@@ -123,9 +123,9 @@
   \includegraphics{./Images/Simbolos/simbolo-Almacenamiento-Definitivo.png}
 \end{center}
 \begin{enumerate}
-  \item Proveedor almacena definitivamente OC0, F1 y Rec1
-  \item Cuentas a Pagar almacena definitivamente OP0, 2, y Legajo de pago.
-  \item Tesorería almacena definitivamente OP1
+  \item Proveedor: almacena definitivamente OC original, F original y Rec primera copia.
+  \item Cuentas a Pagar: almacena definitivamente OP original y segunda copia y Legajo de pago.
+  \item Tesorería: almacena definitivamente OP primera copia.
 \end{enumerate}
 
 
@@ -187,10 +187,23 @@ del pago.
 \end{itemize}
 
 \subsubsection{Descripción campos Cheque}
-\begin{center}
- \includegraphics[scale=0.9,keepaspectratio=true]{./Circuitos-Teoricos/Pago-a-Proveedores/Images/descripcion-cheque.png}
- % descripcion-cheque.png: 640x366 pixel, 96dpi, 16.93x9.68 cm, bb=0 0 480 274
-\end{center}
+\begin{enumerate}
+ \item Tipo de cheque.
+ \item Logo del banco que emite la chequera.
+ \item Provincia de emisi\'on del cheque.
+ \item N\'umero de serie del cheque.
+ \item Fecha de firma del cheque.
+ \item Fecha de cobro del cheque.
+ \item Persona o entidad a la que debe pagarse el cheque.
+ \item Dinero a ser entregado por el cheque en letras.
+ \item Dinero a ser entregado por el cheque en n\'umeros.
+ \item Domicilio de pago Sucursal del Banco.
+ \item Serie, tipo y número de documento reservado para la lectura mecánica del cheque.
+ \item CUIT y n\'umero de la cuenta bancaria.
+ \item Domicilio de la Sucursal de la cuenta bancaria.
+ \item Firma del que entrega el cheque.
+\end{enumerate}
+
 
 \pagebreak
 \section{Normas de control interno generales y específicas de Pagos a Proveedores}
