--- a/trunk/Informe.tex
+++ b/trunk/Informe.tex
@@ -198,6 +198,11 @@ generales y particulares.}
 
 \part{Presupuesto}
 
+% ANEXOS
+\appendix
+\chapter{Ap\'endice 1: Diagramas de información entregado por la empresa}
+\input{anexos.tex}
+
 % ------------------------------ Fin del tp -------------------------------
 
 \end{document}
