--- a/trunk/Circuitos-Teoricos/Produccion/circuito-produccion.tex
+++ b/trunk/Circuitos-Teoricos/Produccion/circuito-produccion.tex
@@ -1,6 +1,7 @@
+\pagebreak
 \section{Cursograma Producci\'on}
 \begin{center}
- \includegraphics[angle=90,scale=0.95,keepaspectratio=true]{./Circuitos-Teoricos/Produccion/Images/cursograma-produccion.png}
+ \includegraphics[angle=90,scale=0.85,keepaspectratio=true]{./Circuitos-Teoricos/Produccion/Images/cursograma-produccion.png}
  % cursograma-produccion.png: 1004x705 pixel, 96dpi, 26.56x18.65 cm, bb=0 0 753 529
 \end{center}
 
