--- a/trunk/Empresa/Circuitos/Cobranzas/Cobro-de-facturas.tex
+++ b/trunk/Empresa/Circuitos/Cobranzas/Cobro-de-facturas.tex
@@ -1,3 +1,4 @@
+\pagebreak
 \section{Cursograma de Cobranzas}
 \includegraphics[scale=0.7]{Empresa/Circuitos/Cobranzas/cursograma-manual-cobranzas.jpg}
 
