--- a/trunk/Empresa/Circuitos/Compras/Compra-de-materiales-y-entrada-de-inventario.tex
+++ b/trunk/Empresa/Circuitos/Compras/Compra-de-materiales-y-entrada-de-inventario.tex
@@ -1,8 +1,9 @@
 %!!! cambiar esto por el diagrama de visio cuando este :)
-\section{Cursograma de Compras}
-\includegraphics [angle=90,width=\linewidth]{Empresa/Circuitos/Compras/Compras.jpg}
 \pagebreak
+\section{Cursograma de Compras}
+\includegraphics [scale=0.22 ,angle=90]{Empresa/Circuitos/Compras/Compras.jpg}
 
+\pagebreak
 \section{Procedimiento de Compras}
 \begin{description}
 \item[Producción] Tras detectar necesidad de materiales y luego de chequear las existencias, el sector de Producción emite el documento Requerimiento de Compra (RC), lo firma el nivel autorizante y lo envía al sector de Compras.
