--- a/trunk/Empresa/Circuitos/Ventas/Ventas-con-transporte-propio.tex
+++ b/trunk/Empresa/Circuitos/Ventas/Ventas-con-transporte-propio.tex
@@ -1,5 +1,6 @@
+\pagebreak
 \section{Cursograma de Ventas}
-\includegraphics [scale=0.65, angle=90]{Empresa/Circuitos/Ventas/ventas.jpg}
+\includegraphics[scale=0.65, angle=90]{Empresa/Circuitos/Ventas/ventas.jpg}
 
 \pagebreak
 \section{Procedimiento de Ventas}
@@ -156,8 +157,6 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
   \item Pagos (circuito del cliente).
   \item Cobranzas.
 \end{enumerate}
-
-
 
 \pagebreak
 \section{Formularios de Ventas}
