--- a/Circuitos-Teoricos/Pago-a-Proveedores/circuito-pago-a-proveedores.tex
+++ b/Circuitos-Teoricos/Pago-a-Proveedores/circuito-pago-a-proveedores.tex
@@ -1,6 +1,7 @@
+\pagebreak
 \section{Cursograma Pagos a Proveedores}
 \begin{center}
- \includegraphics[scale=0.7,keepaspectratio=true]{./Circuitos-Teoricos/Pago-a-Proveedores/Images/cursograma-pago-a-proveedores.png}
+ \includegraphics[scale=0.75,keepaspectratio=true]{./Circuitos-Teoricos/Pago-a-Proveedores/Images/cursograma-pago-a-proveedores.png}
  % cursograma-pago-a-proveedores.png: 587x630 pixel, 96dpi, 15.53x16.67 cm, bb=0 0 440 472
 \end{center}
 
