--- a/Informe.tex
+++ b/Informe.tex
@@ -47,6 +47,7 @@
 %\newcommand{\imgdir}{includes}
 %\graphicspath{{\imgdir/}}
 
+
 %------------------------------ ~paquetes ---------------------------------
 
 %------------------------- Inicio del documento ---------------------------
@@ -200,7 +201,7 @@ generales y particulares.}
 
 % ANEXOS
 \appendix
-\chapter{Ap\'endice 1: Diagramas de información entregado por la empresa}
+\chapter{Diagramas de información entregado por la empresa}
 \input{anexos.tex}
 
 % ------------------------------ Fin del tp -------------------------------
