--- a/Empresa/Circuitos/Ventas/Ventas-con-transporte-propio.tex
+++ b/Empresa/Circuitos/Ventas/Ventas-con-transporte-propio.tex
@@ -1,20 +1,20 @@
 \pagebreak
 \section{Cursograma de Ventas}
-\includegraphics[scale=0.65, angle=90]{Empresa/Circuitos/Ventas/ventas.jpg}
+\includegraphics[scale=0.8, angle=90]{Empresa/Circuitos/Ventas/ventas.jpg}
 
 \pagebreak
 \section{Procedimiento de Ventas}
  \begin{description}
-	\item[Cliente] El cliente solicita un pedido emitiendo una 'Orden de Compra' (OC).
-	\item[Ventas] El área de ventas recibe la 'Orden de Compra' de parte del cliente y de esta manera genera la 'Solicitud de Pedido de Ventas' (SPV) especificando los detalles de la venta como por ejemplo, productos y plazo de entrega tentativo. Firma la SPV y envía una copia a Producción. Registra en el sistema del acciones realizas y archiva en forma definitiva la 'Orden de Compra'.
-	\item[Producción] Producción recibe la SPV y verifica que cuenta con stock suficiente. De no poseer stock necesario se procede a realizar el 'Circuito no relevado de de Producción' (CNR Producción). En caso de contar con el producto solicitado, genera una 'Orden de Pedido de Productos' y la envía a Almacén 2 (Almacén de roductos terminados).  Registra en el sistema del acciones realizas y archiva en forma definitiva la 'Solicitud de Pedido de Ventas'. 
-	\item[Almacén 2] Almacén 2 recibe la 'Orden de Pedido de Productos', ya cuenta con el producto (ya sea porque tenía stock o porque lo ha producido especialmente) y envía el producto junto con la documentación a Almacén 1. Registra en el sistema del acciones realizas.
-	\item[Almacén 1] Almacén 1 prepara los productos para su entrega y genera el 'Remito' correspondiente por triplicado. Entrega el producto al Transportista con los remitos original y copia para que sean firmados por el cliente, y entrega la otra copia a Contaduría. Registra en el sistema del acciones realizas y archiva en forma definitiva la 'Orden de Pedido de Productos'.
-	\item[Contaduría] Contaduría genera un listado de remitos sin facturar asociados a la venta, y genera la 'Factura' correspondiente por duplicado. Registra en el sistema del acciones realizas y envía el original y copia de la factura al Transportista para su envío.
-	\item[Transportista] Transportista recibe los remitos, las facturas y la carga a ser enviada. Envía el pedido junto con la documentación al cliente. 
-	\item[Cliente] El cliente recibe los remito, las facturas y el pedido. Chequea la mercadería recibida junto con los documentos original, y firmas las copias de los mismos.
-	\item[Almacén 1] Almacen 1 recibe la copia del remito firmado por el cliente y cierra la orden de pedido. 
-	\item[Contaduría] Contaduría recibe la copia de la factura y el remito firmado por el cliente y la asienta como recibida por el cliente. El pago de la factura es parte del 'Circuito no relevado de Cobranzas' (CNR Cobranzas)
+	\item[1 - Cliente] El cliente solicita un pedido emitiendo una 'Orden de Compra' (OC) mediante un 'Circuito No Relevado de Compras' (CNR Compras).
+	\item[2 - Ventas] El \'area de ventas recibe la OC de parte del cliente y de esta manera genera la 'Solicitud de Pedido de Ventas' (SPV) especificando los detalles de la venta tal como est\'an especificados en la OC como por ejemplo, productos y plazo de entrega tentativo. Firma la SPV y env\'ia el original a Producci\'on y las copias a Almac\'en 1 y Contadur\'ia. Registra en el sistema la generaci\'on de la SPV y archiva en forma definitiva la 'Orden de Compra' junto a una copia de la SPV.
+	\item[3 - Producci\'on] Producci\'on recibe la SPV y verifica que cuenta con stock suficiente. De no poseer stock necesario se procede a realizar el 'Circuito no relevado de de Producci\'on' (CNR Producci\'on). En caso de contar con el producto solicitado, genera una 'Orden de Pedido de Productos' (OPP) y la env\'ia a Almac\'en 2 (Almac\'en de roductos terminados).  Registra en el sistema la OPP y archiva en forma definitiva la SPV original y la copia de la OPP. 
+	\item[4 - Almac\'en 2] Almac\'en 2 recibe la OPP, ya cuenta con el producto (ya sea porque ten\'ia stock o porque se ha producido especialmente) y env\'ia el producto junto con la documentaci\'on a Almac\'en 1. Registra en el sistema la actualización de la ficha de stock (FS) y el envío de productos al Almac\'en 1. Archiva definitivamente la OPP.
+	\item[5 - Almac\'en 1] Almac\'en 1 prepara los productos para su entrega y genera el 'Remito' (RTO) correspondiente y tres copias. Entrega el producto al Transportista con el RTO original y entrega dos copias a Contadur\'ia. Registra en el sistema la generación de documentos y el env\'io de la mercader\'ia, y archiva en forma definitiva la 'Orden de Pedido de Productos' y una copia del Remito.
+	\item[6 - Contadur\'ia] Contadur\'ia por un lado recibe la SPV asociada a la venta, y la archiva temporalmente. Al recibir el remito de Almac\'en 1 genera un listado de Remitos sin facturar asociados a la venta mediante el sistema, y emite la 'Factura'(F) correspondiente con dos copias. Registra en el sistema la emisi\'on de la factura y env\'ia el original y copia de la factura al Transportista para su env\'io al cliente. Contadur\'ia actualiza la Ficha de Cliente (FC) mediante el sistema y archiva definitivamente una copia de la factura y la SPV recibida.
+	\item[7 - Transportista] Transportista recibe los remitos, las facturas y la carga a ser enviada. Env\'ia el pedido junto con la documentaci\'on al cliente. 
+	\item[8 - Cliente] El cliente recibe los remitos, las facturas y el pedido. Chequea la mercader\'ia recibida junto con los documentos original, y firma las copias de los mismos. Distribuye las copias firmadas de vuelta a la empresa, y procede a realizar el 'Circuito No Relevado de Pagos' (CNR Pagos). Si la mercader\'ia no est\'a conforme a los pactado mediante la OC, se procede al CNR COmpras
+	\item[9 - Almac\'en 1] Almacen 1 recibe la copia del remito firmado por el cliente, la registra en el sistema y lo archiva definitivamente. 
+	\item[10 - Contadur\'ia] Contadur\'ia recibe la copia de la factura y el remito firmados por el cliente y la asienta la recepci\'on en el sistema. El pago de la factura es parte del 'Circuito no relevado de Cobranzas' (CNR Cobranzas)
 \end{description}
 
 \subsection{Entrevista}
@@ -28,7 +28,7 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
  \item \underline{Moviemiento de Materiales}: \\
 	El medio de comunicaci\'on entre almacenes es electr\'onico, es decir, se realiza a trav\'es del sistema Bejerman, y as\'i se realizan las transferencias ``inter-dep\'osito''. Los documentos internos s\'olo se imprimen en papel cuando resulta necesario, y en casos particulares. En una \'epoca se utilizaban fichas y vale de materiales, pero fueron reemplazados por el sistema inform\'atico. Lo mismo sucede con el sector de Producci\'on, que maneja el movimiento de materiales mediante el sistema Bejerman.\\
 	El sector de Producci\'on recibe por sistema la carga de datos del \'area de Ventas (CAC), formaliz\'andolo como ``Orden de Pedido''. En funci\'on a ello elabora una ``Orden de Montaje'', donde el sistema carga los elementos necesarios para confeccionar el pedido solicitado (las distintas partes y piezas para armar la luminaria). Terminado el producto, \'este se declara en el Dep\'osito Producto Terminado (02). Luego, el sector de Almacenes realiza por sistema la transferencia del producto, desde el 02 al Deposito Principal (01), y es desde aqu\'i que el \'area de Expedici\'on puede generar posteriormente el remito para despachar la mercader\'ia.  
-	El transportista carga la mercader\'ia seg\'un la información emanada de los remitos, controlando f\'isicamente la carga.  Luego se le confecciona una Hoja de Ruta con el itinerario diario y por ultimo se le emite un permiso ante el ARBA, en caso que la mercader\'ia que se transporte supere los \$20.000.-   
+	El transportista carga la mercader\'ia seg\'un la informaci\'on emanada de los remitos, controlando f\'isicamente la carga.  Luego se le confecciona una Hoja de Ruta con el itinerario diario y por ultimo se le emite un permiso ante el ARBA, en caso que la mercader\'ia que se transporte supere los \$20.000.-   
 \end{description}
 
 \pagebreak
@@ -38,10 +38,10 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
 \begin{itemize}
   \item Cliente
   \item Ventas
-  \item Producción
+  \item Producci\'on
   \item Almacen 2
   \item Almacen 1
-  \item Contaduría
+  \item Contadur\'ia
   \item Transportista
 \end{itemize}
 
@@ -58,15 +58,15 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
 \end{enumerate}
 
 \begin{center}
-  \textbf{Emisión de Documentos}
+  \textbf{Emisi\'on de Documentos}
   \includegraphics{./Images/Simbolos/simbolo-Emision-de-Documentos.png}
 \end{center}
 \begin{enumerate}
-  \item Cliente emite una Orden de Compra.
-  \item Ventas emite una Solicitud de Pedido de Ventas. 
-  \item Producción emite una Orden de Pedido de Productos.
-  \item Almacén 1 emite remitos por triplicado.
-  \item Contaduría emite facturas por duplicado.
+  \item Cliente emite una Orden de Compra (OC).
+  \item Ventas emite una Solicitud de Pedido de Ventas (SPV) con 3 copias. 
+  \item Producci\'on emite una Orden de Pedido de Productos (OPP) con duplicado.
+  \item Almac\'en 1 emite Remitos (RTO) con 3 copias.
+  \item Contadur\'ia emite Facturas (F) con 2 copias.
 \end{enumerate}
 
 \begin{center}
@@ -75,23 +75,23 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
 \end{center}
 \begin{enumerate}
   \item Ventas firma la Solicitud de Pedido de Ventas.
-  \item Producción firma la Orden de Pedido de Productos.
-  \item Almacén 2 firma la Orden de Pedido de Productos.
+  \item Producci\'on firma la Orden de Pedido de Productos.
+  \item Almac\'en 2 firma la Orden de Pedido de Productos.
   \item Cliente firma las copias de remito y factura.
 \end{enumerate}
 
 \begin{center}
-  \textbf{Distribución}
+  \textbf{Distribuci\'on}
   \includegraphics{./Images/Simbolos/simbolo-Distribucion.png}
 \end{center}
 \begin{enumerate}
-  \item Ventas distribuye Solicitud de Pedido de Ventas.
-  \item Producción distribuye Orden de Pedido de Productos.
-  \item Almacen 2 distribuye Orden de Pedido de Productos junto con el pedido.
-  \item Almacen 1 remitos por triplicado junto con el pedidoo.
-  \item Contaduría distribuye las copias de los remitos y las facturas.
-  \item Transportista distribuye los remitos, las facturas y el pedido.
-  \item El Cliente distribuye las copias de remito y facturas firmadas.
+  \item Ventas distribuye Solicitud de Pedido de Ventas a Producci\'on, Almac\'en 1 y Contadur\'ia.
+  \item Producci\'on distribuye Orden de Pedido de Productos a Almac\'en 2.
+  \item Almacen 2 distribuye los productos pedidos al Almac\'en 1.
+  \item Almacen 1 distribuye los Remitos junto con el pedido al Transportista.
+  \item Contadur\'ia distribuye las copias de los remitos y las facturas al Trasportista.
+  \item Transportista distribuye los remitos, las facturas y el pedido al Cliente.
+  \item El Cliente distribuye las copias de remito y facturas firmadas a Almac\'en 1 y a Contadur\'ia.
 \end{enumerate}
 
 \begin{center}
@@ -100,27 +100,28 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
 \end{center}
 \begin{enumerate}
   \item Cliente almacena Orden de Compra.
-  \item Contaduría almacena una ficha del cliente.
+  \item Almac\'en 1 almacena una copia de la SPV.
+  \item Contadur\'ia almacena una ficha de cliente y la SPV.
   \item Transportista almacena los remitos, las facturas y el pedido.
 \end{enumerate}
 
 \begin{center}
-  \textbf{Control y verificación}
+  \textbf{Control y verificaci\'on}
   \includegraphics{./Images/Simbolos/simbolo-Control-y-Verificacion.png}
 \end{center}
 \begin{enumerate}
-	\item Producción controla si cuenta con stock suficiente con la Solicitud de Pedido de Ventas.
-	\item El cliente controla si el pedido recibio es realmente lo que pidió con la Orden de Compra.
+	\item Producci\'on controla si cuenta con stock suficiente con la Solicitud de Pedido de Ventas.
+	\item El cliente controla si el pedido recibido es realmente lo que pidi\'o con la Orden de Compra.
 \end{enumerate}
 \pagebreak
 
 \begin{center}
-  \textbf{Decisión}
+  \textbf{Decisi\'on}
   \includegraphics{./Images/Simbolos/simbolo-Decision.png}
 \end{center}
 \begin{enumerate}
-  \item Producción controla el stock. De no poseer procede a realizar el 'Circuito no relevado de de Producción' (CNR Producción). En caso de contar con el producto solicitado, genera una 'Orden de Pedido de Productos'.
-  \item Cliente controla el pedido recibido. En caso de existir algún inconveniente ejecuta parto de un 'Circuito no relevado de Compras'.
+  \item Producci\'on controla el stock. De no poseer procede a realizar el 'Circuito no relevado de de Producci\'on' (CNR Producci\'on). En caso de contar con el producto solicitado, genera una 'Orden de Pedido de Productos'.
+  \item Cliente controla el pedido recibido. En caso de existir alg\'un inconveniente ejecuta parto de un 'Circuito no relevado de Compras', sino procede a la firma y distribuci\'on de los documentos firmados.
 \end{enumerate}
 
 \begin{center}
@@ -128,12 +129,13 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
   \includegraphics{./Images/Simbolos/simbolo-Registro.png}
 \end{center}
 \begin{enumerate}
-  \item Ventas registra la venta en curso.
-  \item Almacen 2 registra la entrega de mercadería.
-  \item Almacen 1 registra la entrega de mercadería.
-  \item Contaduría registra la emisión de la factura.
-  \item Almacen 1 registra el arribo de la copia del remito firmada por el cliente.
-  \item Contaduría registra el arribo de la copia de la factura firmada por el cliente.  
+  \item Ventas registra en el sistema la venta en curso y los documentos enviados.
+  \item Producci\'on registra en el sistema la recepci\'on de la SPV y el env\'io de la OPP a Almac\'en 2.
+  \item Almac\'en 2 registra en el sistema la recepci\'on de la OPP y la entrega de mercader\'ia a Almac\'en 1.
+  \item Almac\'en 1 registra en el sistema la recepci\'on de la mercader\'ia la entrega de mercader\'ia.
+  \item Contadur\'ia registra en el sistema la recepci\'on de SPV y los remitos, y la emisi\'on de la factura.
+  \item Almac\'en 1 registra en el sistema el arribo de la copia del remito firmada por el cliente.
+  \item Contadur\'ia registra en el sistema el arribo de la copia de la factura firmada por el cliente.  
 \end{enumerate}
 
 \begin{center}
@@ -141,10 +143,11 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
   \includegraphics{./Images/Simbolos/simbolo-Almacenamiento-Definitivo.png}
 \end{center}
 \begin{enumerate}
-  \item Ventas almacena la Orden de Compra.
-  \item Producción almacena la Solicitud de Pedido de Ventas.
-  \item Almacen 1 almacena la Orden de Pedido de Productos y la copia firmada del remito.
-  \item Contaduría almacena la copia de la factura y el remito firmada.  
+  \item Ventas almacena la Orden de Compra y una copia de la SPV.
+  \item Producci\'on almacena la Solicitud de Pedido de Ventas y la copia de la OPP.
+  \item Almac\'en 2 almacena la OPP.
+  \item Almac\'en 1 almacena la copia de la SPV, una copia del remito y la copia firmada por el cliente del remito.
+  \item Contadur\'ia almacena una copia de la factura y la copia de la factura y el remito firmada por el cliente.  
 \end{enumerate}
 
 \begin{center}
@@ -176,7 +179,7 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
 \subsubsection{Descripci\'on campos de la Factura}
 \begin{enumerate}
   \item Empresa emisora: Raz\'on Social de la empresa
-  \item Empresa emisora: Información de Sucursal. Domicilio y N\'umero de Tel\'efono
+  \item Empresa emisora: Informaci\'on de Sucursal. Domicilio y N\'umero de Tel\'efono
   \item Empresa emisora: Responsabilidad frente al IVA
   \item Tipo de Factura (A en este caso)
   \item N\'umero de Factura
@@ -198,7 +201,7 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
   \item Detalle de la factura: Precio unitario del \'item. El descuento del \'item es opcional.
   \item Detalle de la factura: Precio total del \'item (cantidad * precio unitario)
   \item Detalle de la factura: Subtotal de items (suma de los totales de \'item)
-  \item Detalle de la factura: Detalle de Regímenes Especiales que aplican.
+  \item Detalle de la factura: Detalle de Reg\'imenes Especiales que aplican.
   \item Total de Impuestos que aplican a la venta (sin IVA).
   \item Subtotal con Impuestos y sin IVA.
   \item IVA discriminado.
@@ -220,12 +223,47 @@ Luego de analizar los diagramas de procedimiento de alto nivel del proceso de ve
 \begin{itemize}
   \item \textbf{Objetivo:} En este documento se detallan los productos a ser enviados al cliente. No se incluyen detalles de precios y se especifica la contidad de bultos.
   \item \textbf{Alcance:} Es un documento entre la empresa y el cliente.
-  \item \textbf{Emisor:} Almacén 1.
+  \item \textbf{Emisor:} Almac\'en 1.
   \item \textbf{Cantidad de Copias Emitidas:} Original y Copia.
-  \item \textbf{Sector receptor:} Expedición, para su envío al cliente.
+  \item \textbf{Sector receptor:} Expedici\'on, para su env\'io al cliente.
  \end{itemize}
 \subsubsection{Descripci\'on campos del Remito}
 
+\begin{enumerate}
+   \item Empresa emisora: Logo y Raz\'on Social de la empresa
+   \item Empresa emisora: Domicilio Sucursal
+   \item Empresa emisora: Domicilio Legal
+   \item Empresa emisora: Informaci\'on de Contacto. N\'umeros de tel\'efono, sitio web, email, fax.
+   \item Empresa emisora: Responsabilidad ante el IVA
+   \item Tipo de Documento: Remito (S\'imbolo).
+   \item Tipo de Documento: Remito.
+   \item N\'umero de Remito.
+   \item Fecha de Emisi\'on del Remito
+   \item Empresa emisora: CUIT
+   \item Empresa emisora: C\'odigo de Ingresos Brutos.
+   \item Empresa emisora: Fecha de Inicio de Actividades.
+   \item Cliente: Raz\'on Social
+   \item Cliente: Domicilio 
+   \item Cliente: Responsabilidad ante el IVA
+   \item Cliente: C\'odigo interno de Cliente
+   \item Solicitud de Pedido de Venta (SPV) asociada al remito.
+   \item Cliente: Localidad
+   \item Cliente: CUIT
+   \item Detalle del Remito: C\'odigo de Producto.
+   \item Detalle del Remito: Cantidad de Producto
+   \item Detalle del Remito: Descripci\'on del Producto
+   \item Detalle del Remito: Nota de Condici\'on de Entrega (Opcional)
+   \item Detalle del Remito: Precio Total de la Mercader\'ia
+   \item Cantidad de Bultos, Precio por Bulto, Flete y Seguro (Opcionales)
+   \item Transportista: Nombre o Raz\'on Social
+   \item Transportista: Domicilio
+   \item Transportista: CUIT y Tel\'efono
+   \item Fima Del Cliente
+   \item Imprenta autorizada: Tel\'efono, CUIT, N\'umero de Inscripci\'on, Rango de Remitos Impresos.
+   \item Imprenta autorizada: CAI. (C\'odigo de Autorizaci\'on de Imprenta)
+   \item Vencimiento del Remito.
+  \end{enumerate}
+  
 \pagebreak
 \section{Normas de Control Interno de Ventas}
 \begin{itemize}
